<?xml version="1.0" encoding="UTF-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">
        <View
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/rorschach"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_user_24">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:background="@color/transparent"
                        android:drawablePadding="4dp"
                        android:hint="@string/enterUsername"
                        android:inputType="text"
                        android:maxLength="16"
                        android:maxLines="1"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_password_24">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@color/transparent"
                        android:drawablePadding="4dp"
                        android:hint="@string/enterPassword"
                        android:maxLength="16"
                        android:maxLines="1"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_password_24">

                    <EditText
                        android:id="@+id/passwordAgain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@color/transparent"
                        android:drawablePadding="4dp"
                        android:hint="@string/enterPasswordAgain"
                        android:maxLength="16"
                        android:maxLines="1"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:background="@color/transparent"
                        android:drawablePadding="4dp"
                        android:hint="@string/enterEmail"
                        android:maxLength="20"
                        android:maxLines="1"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_phone_24">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@color/transparent"
                        android:drawablePadding="4dp"
                        android:hint="@string/enterPhoneNum"
                        android:maxLength="11"
                        android:maxLines="1"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/alert" />
            </LinearLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register" />

        </LinearLayout>

    </FrameLayout>

</layout>
