<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.zcyi.rorschach.myFragment.TranslationVM" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/my_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{(view)->vm.hideKeyBoard(view)}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:background="@drawable/top_bgn"
                android:elevation="5dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_translation"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/lin_conversion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="@{vm.ChangeState}">

                    <TextView
                        android:id="@+id/language_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/conversion"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/image_description"
                        app:img_src="@{vm.img_src_lan}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chinese"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_bg"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp">

                <EditText
                    android:id="@+id/main_input"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/alert"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={vm.inputInfo}"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/alertInfo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@{vm.alert}"
                        android:textColor="@color/alert" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/black"
                        android:elevation="5dp"
                        android:onClick="@{()->vm.translation()}"
                        android:text="@string/btn_translation" />
                </LinearLayout>

            </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|start"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/to_input"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@{vm.to}"
                                android:textColor="@color/black"
                                android:textSize="26sp" />

                            <TextView
                                android:id="@+id/from_input"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@{vm.query}"
                                android:textColor="@color/black"
                                android:textSize="26sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/us_phonetic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{vm.USPhonetic}" />

                            <TextView
                                android:id="@+id/uk_phonetic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{vm.UKPhonetic}" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/voice_play"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:visibility="gone" />

                        </LinearLayout>
                        <TextView
                            android:id="@+id/phonetic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:text="@{vm.CPhonetic}" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/collection"
                            img_src="@{vm.img_src_collection}"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/image_description"
                            android:onClick="@{vm.Collection}" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:overScrollMode="never" />

                    <TextView
                        android:id="@+id/web_shape"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{vm.webShape}"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/main_translation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{vm.explains}" />

                    <TextView
                        android:id="@+id/web_eg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{vm.webEg}"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/web_translation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{vm.webs}" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</layout>


